# shoplist_api

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
docker/: start_app.sh
docs/: main.md
docs/urls/: shopping_list.md  shopping_list_users.md  user_urls.md
migration/: env.py
migration/versions/: 4f8519fda689_create_user_relation.py  7f25f489dfc8_change_type_of_column_phone_number_in_.py
migrations/: env.py
migrations/versions/: b25d38c11879_create_user_and_shopping_list_tables.py
src/: factory.py  main.py
src/app/: models.py
src/app/shopping_list/: models.py  repositories.py  routes.py  services.py
src/app/user/: models.py  repositories.py  routes.py  schemas.py  services.py
src/core/: factory.py  redis_adapter.py  schemas.py  smtp_class.py  template_engine.py  utils.py
src/core/base/: database.py  models.py  redis_adapter.py  repositories.py  services.py  utils.py
src/core/config/: .env_example  __init__.py  settings.py
src/templates/: gmail_one_time_code.html
tests/: factories.py  utils.py
tests/test_shopping_list/: test_shopping_list_create.py
tests/test_user/: test_user_repository.py
